--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "hello express test app",
   "version": "0.0.1",
   "private": true,
+  "engines": {
+    "node": "0.10.x",
+    "npm":  "1.2.x"
+  },
   "dependencies": {
     "express": "3.x"
   }
